--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -59,12 +59,15 @@ In this paper we propose a solution to the problem of reviewers recognition base
 \subsection{Peer-review: present problems and mild solutions}
 Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues, here reviewed.
 \paragraph{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submit manuscript to the journal where an editorial team assesses if the paper meets meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only know to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. If the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript with a letter to the reviewers. The same reviewers might be contacted again and if they want they can follow up the peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in PubMed for a time period of 30 years claims that the median review time is around 100 days\cite{Kendall-peerrev}.
-\paragraph{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination, social prestige of the institution. To solve this problem some journals have implemented double-blind review process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
-\paragraph{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and 'civility; of the review process when open reports are released (open peer review). 
-\paragraph{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?". 
-\paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals and the number of experienced reviewers assigned which demands an expansion of the reviewer's pool including early career scientists. \cite{tragedy-reviewers}.
 \paragraph{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated in doing peer-review for a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science being published through sloppy and uncritical reviews.
-\newline Some mild attempts to credit peer review has been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials. It's worth mentioning: Publons\cite{Publons}a service integrated with ORCID (researcher identifier) that provides peer-review metric; Peerage of Science\cite{Peerage}, a journal-independent free service for scientific peer review and publishing that provides also a peer-review of the reviews.
+\paragraph{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and 'civility; of the review process when open reports are released according to the standards of open peer review.
+\paragraph{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination, social prestige of the institution. To solve this problem some journals have implemented double-blind review process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
+\paragraph{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?". 
+\paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists. \cite{tragedy-reviewers}.
+
+\subsection{Related work} Some mild attempts to credit peer review has been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials.
+\newline It's also worth mentioning \emph{Publons}\cite{Publons}, a service integrated with ORCID (researcher identifier) that provides peer-review metric; \emph{Peerage} of Science\cite{Peerage} and \emph{ResearchSquare}, a journal-independent free service for scientific peer review and publishing that provides also a peer-review of the reviews.
+\emph{ScienceMiles} \cite{ScienceMiles} proposes a cryptocurrency for incentivizing peer-reviews through a blockchain-based platform and an open peer-review process. \emph{INFINITCODEX (I8X)} \cite{I8X}, is a platform that promotes cooperative user behaviour through dynamic research papers that undergo  continuous peer review process. The system implements cryptoeconomical incentives for building reputation in the community of users.
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on a distributed platform that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
@@ -73,19 +76,17 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on a
 
 \subsection{Design}
 
-\emph{Incentivisation.} A typical business model for open source software (OSS) movement is open-source bounty. Bounties are a prize or monetary reward given for completing a task before a deadline. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are Gitcoin \cite{Gitcoin} and The Bounties Network \cite{Bounty}. Incentives can be cryptographic tokens, unit of values registered on a blockchain network and that represent the quantity and quality of a service within a network. 
+Here we describe the main features of AntsReview.
+\paragraph{Incentivisation and recognition.} A typical business model for open source software (OSS) movement is open-source bounty. Bounties are a prize or monetary reward given for completing a task before a deadline. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are Gitcoin \cite{Gitcoin} and The Bounties Network \cite{Bounty}. Incentives can be cryptographic tokens, unit of values registered on a blockchain network and that represent the quantity and quality of a service within a network. 
 \newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals)  should be able to retribute with tokens, an internal cryptocurrency that can be spent externally. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. 
-Thus, the system acts also as a reputation builder.
-\newline \emph{Transparency of the records} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community ('open report') even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. following the example of models of 'cascading' or 'portable peer-reviews' offered by journals peer-review consortia, such as the Neuroscience Peer Review Consortium and independent companies like ResearchSquare and Peerage of Science \cite{Peerage}, peer-reviews in Ants-Review will be transferable
+Thus, the system acts also as a reputation builder. 
+\newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews exchange to the same manuscript can have their tokens accrue interest over time (see Implementation).
 
-Here we describe the main features of AntsReview:
-\begin{itemize}
-\item \emph{accountability}: both for recognition and for security against fraud and abuse etc we need to be able to track back the identities of the contributors to a peer-review to make sure there are no conflict of interest. This means the platform acts like a version control system where commits are permanent and their hashes timestamped; 
-\item \emph{transparency of the records}: all reviews should be open access to the community ('open report') to prevent waste of knowledge and disrupt the obscure system of black boxes of peer reviews in journals that centralize all the reports;
-\item \emph{incentivisation}: 
+\paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community ('open report' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the Neuroscience Peer Review Consortium and independent companies like ResearchSquare and Peerage of Science \cite{Peerage}, peer-reviews in Ants-Review will be transferable ('cascading' or 'portable peer-reviews').
+
+\paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to righteously attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a decentralized content-addressable, peer-to-peer protocol which guarantees data immutability and unique file identification. 
+
 \item \emph{inclusiveness via gamification}: all the community is involved in the process of peer-reviewing since there is no selection process ('open participation', 'open interaction', 'open platform');
-\end{itemize}
-
 
 
 There are two possible scenarios depending if AntsReview integrates an existing journal or if AntsReview becomes a platform completely decoupled from journals.
